welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:8: error: value =< is not a member of Int
		if (nums(x) =< z ) { z = nums (x) }
                            ^