welcome.lessons.welcome.array.maxvalue.Extrema.scala.code
def extrema(nums:Array[Int]): Int = {
	var z:Int = nums(0)
	var y:Int = (0)
	for ( x <- 0 to nums.length-1) {
		if (nums(x) >= y) { y=nums(x)}
	}
	for ( x <- 0 to nums.length - 1) {
		if (nums(x) =< z ) { z = nums (x) }
	}
		
	return y-z
}
	
